--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest -i"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
